--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 		<button id="restart-button" onclick="location.reload()">Restart</button> <!--button to restarts the adventure... it just reloads the page-->
 		<footer>
-			Created by Lambientan under the Creative Commons license
+			Created by pedernal under the Creative Commons license
 		</footer>
 	</body>
 </html>
